# neura

./: Cargo.toml  LICENSE.md  neura.toml  todo.md
src/: config.rs  main.rs
src/cli/: executor.rs  input.rs  mod.rs  parser.rs  prompts.rs  validator.rs
src/commands/: init.rs  mod.rs  watch.rs
src/constants/: commands.rs  models.rs
src/models/: model.rs
