[package]
name = "neura"
version = "0.1.0"
edition = "2021"
description = "AI-powered, automated debugging for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

openai = "1.0.0-alpha.9"
notify = "6.0.0"
miette = "5.9.0"
linked-hash-map = "0.5.6"
once_cell = "1.17.1"
tokio = { version = '1.28.1', features = ["rt-multi-thread", "macros"] }
dialoguer = "0.10.4"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
colored = "2.0.0"
serde_json = "1.0.96"
indicatif = "0.17.3"
dotenv = "0.15.0"
tiktoken-rs = "0.4.2"
sha256 = "1.1.3"
